@@ -19,7 +19,7 @@ package com.swirlds.virtualmap.internal.cache;
 import static com.swirlds.common.test.AssertionUtils.assertEventuallyDoesNotThrow;
 import static com.swirlds.virtualmap.VirtualMapTestUtils.createMap;
 import static com.swirlds.virtualmap.VirtualMapTestUtils.getRoot;
-import static com.swirlds.virtualmap.internal.cache.VirtualNodeCache.DELETED_INTERNAL_RECORD;
+import static com.swirlds.virtualmap.internal.cache.VirtualNodeCache.DELETED_HASH;
 import static com.swirlds.virtualmap.internal.cache.VirtualNodeCache.DELETED_LEAF_RECORD;
 import static java.util.Arrays.asList;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
@@ -93,7 +93,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord internalRecord = new VirtualInternalRecord(0);
         assertThrows(
                 MutabilityException.class,
-                () -> cache.putInternal(internalRecord),
+                () -> cache.putHash(internalRecord),
                 "A fresh cache is immutable for internals");
     }
 
@@ -122,7 +122,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord virtualRecord = new VirtualInternalRecord(0);
         assertThrows(
                 MutabilityException.class,
-                () -> latest.putInternal(virtualRecord),
+                () -> latest.putHash(virtualRecord),
                 "immutable copy shouldn't be updatable");
     }
 
@@ -172,14 +172,14 @@ class VirtualNodeCacheTest extends VirtualTestBase {
 
         final VirtualNodeCache<TestKey, TestValue> latest = cache;
         final VirtualInternalRecord rootInternal0 = rootInternal();
-        original.putInternal(rootInternal0);
+        original.putHash(rootInternal0);
         assertEquals(
-                rootInternal0,
-                original.lookupInternalByPath(ROOT_PATH, false),
+                rootInternal0.getHash(),
+                original.lookupHashByPath(ROOT_PATH, false),
                 "value that was found should equal original");
         assertEquals(
-                rootInternal0,
-                latest.lookupInternalByPath(ROOT_PATH, false),
+                rootInternal0.getHash(),
+                latest.lookupHashByPath(ROOT_PATH, false),
                 "value that was found should equal original");
     }
 
@@ -195,7 +195,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord virtualRecord = rootInternal();
         assertThrows(
                 MutabilityException.class,
-                () -> latest.putInternal(virtualRecord),
+                () -> latest.putHash(virtualRecord),
                 "Latest is immutable for internal node modifications");
     }
 
@@ -219,8 +219,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
             // As long as this doesn't throw an exception, the test passes.
             final int iFinal = i;
             final VirtualNodeCache<TestKey, TestValue> oldFinal = old;
-            assertDoesNotThrow(
-                    () -> oldFinal.putInternal(new VirtualInternalRecord(iFinal)), "Should not throw exception");
+            assertDoesNotThrow(() -> oldFinal.putHash(new VirtualInternalRecord(iFinal)), "Should not throw exception");
 
             nextRound();
             old = latest;
@@ -417,14 +416,14 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualNodeCache<TestKey, TestValue> oneLess = cache;
         final VirtualInternalRecord rootInternal0 = rootInternal();
         final VirtualLeafRecord<TestKey, TestValue> bananaLeaf1 = bananaLeaf(B_PATH);
-        original.putInternal(rootInternal0);
+        original.putHash(rootInternal0);
         oneLess.putLeaf(bananaLeaf1);
         nextRound();
 
         final VirtualNodeCache<TestKey, TestValue> latest = cache;
         final VirtualInternalRecord leftInternal1 = leftInternal();
         final VirtualLeafRecord<TestKey, TestValue> cherryLeaf2 = cherryLeaf(C_PATH);
-        oneLess.putInternal(leftInternal1);
+        oneLess.putHash(leftInternal1);
         latest.putLeaf(cherryLeaf2);
 
         // I should be able to see everything from all three versions
@@ -453,12 +452,12 @@ class VirtualNodeCacheTest extends VirtualTestBase {
                 latest.lookupLeafByPath(C_PATH, false),
                 "value that was looked up should match original value");
         assertEquals(
-                rootInternal0,
-                latest.lookupInternalByPath(ROOT_PATH, false),
+                rootInternal0.getHash(),
+                latest.lookupHashByPath(ROOT_PATH, false),
                 "value that was looked up should match original value");
         assertEquals(
-                leftInternal1,
-                latest.lookupInternalByPath(LEFT_PATH, false),
+                leftInternal1.getHash(),
+                latest.lookupHashByPath(LEFT_PATH, false),
                 "value that was looked up should match original value");
 
         // After releasing the original, I should only see what was available in the latest two
@@ -484,10 +483,10 @@ class VirtualNodeCacheTest extends VirtualTestBase {
                             cherryLeaf2,
                             latest.lookupLeafByPath(C_PATH, false),
                             "value that was looked up should match original value");
-                    assertNull(latest.lookupInternalByPath(ROOT_PATH, false), "no leaf should be found");
+                    assertNull(latest.lookupHashByPath(ROOT_PATH, false), "no leaf should be found");
                     assertEquals(
-                            leftInternal1,
-                            latest.lookupInternalByPath(LEFT_PATH, false),
+                            leftInternal1.getHash(),
+                            latest.lookupHashByPath(LEFT_PATH, false),
                             "value that was looked up should match original value");
                 },
                 Duration.ofSeconds(1),
@@ -673,8 +672,8 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final List<TestValue> expected0 = new ArrayList<>(asList(APPLE, BANANA, CHERRY, null, null, null, null));
         validateCache(cache0, expected0);
         nextRound();
-        cache0.putInternal(rootInternal());
-        cache0.putInternal(leftInternal());
+        cache0.putHash(rootInternal());
+        cache0.putHash(leftInternal());
 
         // Update, Remove, and add some items
         final VirtualNodeCache<TestKey, TestValue> cache1 = cache;
@@ -688,9 +687,9 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         validateCache(cache0, expected0);
         validateCache(cache1, expected1);
         nextRound();
-        cache1.putInternal(rootInternal());
-        cache1.putInternal(leftInternal());
-        cache1.putInternal(rightInternal());
+        cache1.putHash(rootInternal());
+        cache1.putHash(leftInternal());
+        cache1.putHash(rightInternal());
 
         // Update, Remove, and add some of the same items and some new ones
         final VirtualNodeCache<TestKey, TestValue> cache2 = cache;
@@ -706,10 +705,10 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         validateCache(cache1, expected1);
         validateCache(cache2, expected2);
         nextRound();
-        cache2.putInternal(rootInternal());
-        cache2.putInternal(leftInternal());
-        cache2.putInternal(rightInternal());
-        cache2.putInternal(leftLeftInternal());
+        cache2.putHash(rootInternal());
+        cache2.putHash(leftInternal());
+        cache2.putHash(rightInternal());
+        cache2.putHash(leftLeftInternal());
 
         // And a cache 3 just for fun
         final VirtualNodeCache<TestKey, TestValue> cache3 = cache;
@@ -749,8 +748,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final int totalMutationCount = 100_000;
         final VirtualNodeCache<TestKey, TestValue> cache0 = cache;
         for (int i = 0; i < totalMutationCount; i++) {
-            cache0.putLeaf(
-                    new VirtualLeafRecord<>(totalMutationCount + i, null, new TestKey(i), new TestValue("Value" + i)));
+            cache0.putLeaf(new VirtualLeafRecord<>(totalMutationCount + i, new TestKey(i), new TestValue("Value" + i)));
         }
 
         nextRound();
@@ -758,7 +756,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         // Now add the internal nodes for round 0
         for (int i = 0; i < totalMutationCount; i++) {
             final byte[] internalBytes = ("Internal" + i).getBytes(StandardCharsets.UTF_8);
-            cache0.putInternal(new VirtualInternalRecord(i, CRYPTO.digestSync(internalBytes)));
+            cache0.putHash(new VirtualInternalRecord(i, CRYPTO.digestSync(internalBytes)));
         }
 
         // Replace the first 60,000 leaves with newer versions
@@ -766,7 +764,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final int nextMutationCount = 60_000;
         for (int i = 0; i < nextMutationCount; i++) {
             cache1.putLeaf(new VirtualLeafRecord<>(
-                    totalMutationCount + i, null, new TestKey(i), new TestValue("OverriddenValue" + i)));
+                    totalMutationCount + i, new TestKey(i), new TestValue("OverriddenValue" + i)));
         }
 
         nextRound();
@@ -774,7 +772,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         // Now override the first 60,000 internal nodes with newer versions
         for (int i = 0; i < nextMutationCount; i++) {
             final byte[] internalBytes = ("OverriddenInternal" + i).getBytes(StandardCharsets.UTF_8);
-            cache1.putInternal(new VirtualInternalRecord(i, CRYPTO.digestSync(internalBytes)));
+            cache1.putHash(new VirtualInternalRecord(i, CRYPTO.digestSync(internalBytes)));
         }
 
         nextRound();
@@ -799,15 +797,17 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         });
 
         index.set(0);
-        cache1.dirtyInternals(totalMutationCount).forEach(rec -> {
+        cache1.dirtyHashes(totalMutationCount, totalMutationCount * 2).forEach(rec -> {
             final int i = index.getAndIncrement();
             assertEquals(i, rec.getPath(), "path should match index");
-            if (i < nextMutationCount) {
+            if (i < nextMutationCount) { // mutated internal nodes
                 final byte[] internalBytes = ("OverriddenInternal" + i).getBytes(StandardCharsets.UTF_8);
                 assertEquals(CRYPTO.digestSync(internalBytes), rec.getHash(), "hashes should match");
-            } else {
+            } else if (i < totalMutationCount) { // original internal nodes
                 final byte[] internalBytes = ("Internal" + i).getBytes(StandardCharsets.UTF_8);
                 assertEquals(CRYPTO.digestSync(internalBytes), rec.getHash(), "hashes should match");
+            } else { // leaf nodes, not hashed
+                assertNull(rec.getHash(), "hashes should be null");
             }
         });
     }
@@ -845,9 +845,9 @@ class VirtualNodeCacheTest extends VirtualTestBase {
                     final int chance = random.nextInt(100);
                     // Give a 90% chance of a put
                     if (chance <= 90) {
-                        cache.putLeaf(new VirtualLeafRecord<>(id, null, new TestKey(id), new TestValue(r + ":" + id)));
+                        cache.putLeaf(new VirtualLeafRecord<>(id, new TestKey(id), new TestValue(r + ":" + id)));
                     } else {
-                        cache.deleteLeaf(new VirtualLeafRecord<>(id, null, new TestKey(id), null));
+                        cache.deleteLeaf(new VirtualLeafRecord<>(id, new TestKey(id), null));
                     }
                 }
                 final VirtualNodeCache<TestKey, TestValue> done = cache;
@@ -940,8 +940,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     void puttingANullInternalLeadsToNPE() {
         final VirtualNodeCache<TestKey, TestValue> cache0 = cache;
         nextRound();
-        assertThrows(
-                NullPointerException.class, () -> cache0.putInternal(null), "null shouldn't be accepted into cache");
+        assertThrows(NullPointerException.class, () -> cache0.putHash(null), "null shouldn't be accepted into cache");
     }
 
     @Test
@@ -952,10 +951,10 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         nextRound();
 
         final VirtualInternalRecord root0 = rootInternal();
-        cache0.putInternal(root0);
+        cache0.putHash(root0);
         assertEquals(
-                root0,
-                cache0.lookupInternalByPath(ROOT_PATH, false),
+                root0.getHash(),
+                cache0.lookupHashByPath(ROOT_PATH, false),
                 "value that was looked up should match original value");
     }
 
@@ -967,11 +966,15 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         nextRound();
 
         final VirtualInternalRecord root0 = rootInternal();
-        cache0.putInternal(root0);
-        cache0.putInternal(root0);
+        cache0.putHash(root0);
         assertEquals(
-                root0,
-                cache0.lookupInternalByPath(ROOT_PATH, false),
+                root0.getHash(),
+                cache0.lookupHashByPath(ROOT_PATH, false),
+                "value that was looked up should match original value");
+        cache0.putHash(root0);
+        assertEquals(
+                root0.getHash(),
+                cache0.lookupHashByPath(ROOT_PATH, false),
                 "value that was looked up should match original value");
     }
 
@@ -984,13 +987,13 @@ class VirtualNodeCacheTest extends VirtualTestBase {
 
         final VirtualInternalRecord root1 = rootInternal();
         root1.setHash(CRYPTO.digestSync("Root 1".getBytes(StandardCharsets.UTF_8)));
-        cache0.putInternal(root1);
+        cache0.putHash(root1);
         final VirtualInternalRecord root2 = rootInternal();
         root2.setHash(CRYPTO.digestSync("Root 2".getBytes(StandardCharsets.UTF_8)));
-        cache0.putInternal(root2);
+        cache0.putHash(root2);
         assertEquals(
-                root2,
-                cache0.lookupInternalByPath(ROOT_PATH, false),
+                root2.getHash(),
+                cache0.lookupHashByPath(ROOT_PATH, false),
                 "value that was looked up should match original value");
     }
 
@@ -1000,7 +1003,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     void deletingAnInternalWithSealedCacheThrows() {
         cache.seal();
         assertThrows(
-                MutabilityException.class, () -> cache.deleteInternal(ROOT_PATH), "can't delete after cache is sealed");
+                MutabilityException.class, () -> cache.deleteHash(ROOT_PATH), "can't delete after cache is sealed");
     }
 
     @Test
@@ -1013,12 +1016,12 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord root0 = rootInternal();
         final VirtualInternalRecord left0 = leftInternal();
         final VirtualInternalRecord right0 = rightInternal();
-        cache0.putInternal(root0);
-        cache0.putInternal(left0);
-        cache0.putInternal(right0);
+        cache0.putHash(root0);
+        cache0.putHash(left0);
+        cache0.putHash(right0);
 
-        assertNull(cache.lookupInternalByPath(LEFT_LEFT_PATH, false), "no node should be found");
-        cache.deleteInternal(LEFT_LEFT_PATH);
+        assertNull(cache.lookupHashByPath(LEFT_LEFT_PATH, false), "no node should be found");
+        cache.deleteHash(LEFT_LEFT_PATH);
     }
 
     @Test
@@ -1031,18 +1034,18 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord root0 = rootInternal();
         final VirtualInternalRecord left0 = leftInternal();
         final VirtualInternalRecord right0 = rightInternal();
-        cache0.putInternal(root0);
-        cache0.putInternal(left0);
-        cache0.putInternal(right0);
+        cache0.putHash(root0);
+        cache0.putHash(left0);
+        cache0.putHash(right0);
 
         assertEquals(
-                right0,
-                cache0.lookupInternalByPath(RIGHT_PATH, false),
+                right0.getHash(),
+                cache0.lookupHashByPath(RIGHT_PATH, false),
                 "value that was looked up should match original value");
-        cache.deleteInternal(RIGHT_PATH);
+        cache.deleteHash(RIGHT_PATH);
         assertEquals(
-                DELETED_INTERNAL_RECORD,
-                cache.lookupInternalByPath(RIGHT_PATH, false),
+                DELETED_HASH,
+                cache.lookupHashByPath(RIGHT_PATH, false),
                 "value that was looked up should match original value");
     }
 
@@ -1056,16 +1059,16 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord root0 = rootInternal();
         final VirtualInternalRecord left0 = leftInternal();
         final VirtualInternalRecord right0 = rightInternal();
-        cache0.putInternal(root0);
-        cache0.putInternal(left0);
-        cache0.putInternal(right0);
+        cache0.putHash(root0);
+        cache0.putHash(left0);
+        cache0.putHash(right0);
         nextRound();
         cache0.seal();
 
-        cache.deleteInternal(RIGHT_PATH);
+        cache.deleteHash(RIGHT_PATH);
         assertEquals(
-                DELETED_INTERNAL_RECORD,
-                cache.lookupInternalByPath(RIGHT_PATH, false),
+                DELETED_HASH,
+                cache.lookupHashByPath(RIGHT_PATH, false),
                 "value that was looked up should match original value");
     }
 
@@ -1078,7 +1081,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         nextRound();
 
         final VirtualInternalRecord root0 = rootInternal();
-        cache0.putInternal(root0);
+        cache0.putHash(root0);
         cache0.seal();
         cache0.release();
 
@@ -1094,7 +1097,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     void gettingANonExistentInternalGivesNull() {
         final VirtualNodeCache<TestKey, TestValue> cache0 = cache;
         nextRound();
-        assertNull(cache0.lookupInternalByPath(100, false), "value should not be found");
+        assertNull(cache0.lookupHashByPath(100, false), "value should not be found");
     }
 
     @Test
@@ -1108,25 +1111,24 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord left0 = leftInternal();
         final VirtualInternalRecord right0 = rightInternal();
         right0.setHash(CRYPTO.digestSync("Right 0".getBytes(StandardCharsets.UTF_8)));
-        cache0.putInternal(root0);
-        cache0.putInternal(left0);
-        cache0.putInternal(right0);
+        cache0.putHash(root0);
+        cache0.putHash(left0);
+        cache0.putHash(right0);
         final VirtualNodeCache<TestKey, TestValue> cache1 = cache;
         nextRound();
 
         final VirtualNodeCache<TestKey, TestValue> cache2 = cache;
         nextRound();
-        final VirtualInternalRecord right1 = cache2.lookupInternalByPath(RIGHT_PATH, true);
+        final Hash right1 = cache2.lookupHashByPath(RIGHT_PATH, true);
         assertNotNull(right1, "value should have been found");
-        right1.setHash(CRYPTO.digestSync("Right 1".getBytes(StandardCharsets.UTF_8)));
 
         assertEquals(
-                right0,
-                cache1.lookupInternalByPath(RIGHT_PATH, false),
+                right0.getHash(),
+                cache1.lookupHashByPath(RIGHT_PATH, false),
                 "value that was looked up should match original value");
         assertEquals(
                 right1,
-                cache2.lookupInternalByPath(RIGHT_PATH, false),
+                cache2.lookupHashByPath(RIGHT_PATH, false),
                 "value that was looked up should match original value");
     }
 
@@ -1140,13 +1142,15 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord root0 = rootInternal();
         final VirtualInternalRecord left0 = leftInternal();
         final VirtualInternalRecord right0 = rightInternal();
-        cache0.putInternal(root0);
-        cache0.putInternal(left0);
-        cache0.putInternal(right0);
+        cache0.putHash(root0);
+        cache0.putHash(left0);
+        cache0.putHash(right0);
         nextRound(); // seals dirtyLeaves, but not dirtyInternals
+        // assertThrows(MutabilityException.class, () -> cache0.dirtyHashes(2, 4),
+        //				"shouldn't be able to call method on immutable cache");
         assertThrows(
                 MutabilityException.class,
-                () -> cache0.dirtyInternals(4),
+                () -> cache0.dirtyHashes(left0.getPath(), right0.getPath()),
                 "shouldn't be able to call method on immutable cache");
     }
 
@@ -1616,7 +1620,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         cache.putLeaf(appleLeaf(1));
         cache.putLeaf(bananaLeaf(2));
         cache.copy();
-        cache.putInternal(rootInternal());
+        cache.putHash(rootInternal());
         final VirtualNodeCache<TestKey, TestValue> snapshot =
                 cache.snapshot().snapshot().snapshot();
         assertEquals(appleLeaf(1), snapshot.lookupLeafByKey(A_KEY, false), "value should match expected");
@@ -1631,7 +1635,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         cache.putLeaf(appleLeaf(1));
         cache.putLeaf(bananaLeaf(2));
         cache.copy();
-        cache.putInternal(rootInternal());
+        cache.putHash(rootInternal());
         VirtualNodeCache<TestKey, TestValue> snapshot;
         for (int i = 0; i < 10; i++) {
             snapshot = cache.snapshot();
@@ -1680,7 +1684,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final List<CacheInfo> snapshots = caches.stream()
                 .map(original ->
                         new CacheInfo(original.cache.snapshot(), original.firstLeafPath, original.lastLeafPath))
-                .collect(Collectors.toList());
+                .toList();
 
         final List<CacheInfo> expectedCaches = createCaches();
         for (int i = 0; i < snapshots.size(); i++) {
@@ -1764,25 +1768,39 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord leftLeft0 = leftLeftInternal();
         final VirtualInternalRecord leftRight0 = leftRightInternal();
         final VirtualInternalRecord rightLeft0 = rightLeftInternal();
-        cache0.putInternal(root0);
-        cache0.putInternal(left0);
-        cache0.putInternal(right0);
-        cache0.putInternal(leftLeft0);
-        cache0.putInternal(leftRight0);
-        cache0.putInternal(rightLeft0);
-        appleLeaf0.setHash(CRYPTO.digestSync(appleLeaf0));
-        eggplantLeaf0.setHash(CRYPTO.digestSync(eggplantLeaf0));
-        leftLeft0.setHash(digest(appleLeaf0, eggplantLeaf0));
-        cherryLeaf0.setHash(CRYPTO.digestSync(cherryLeaf0));
-        figLeaf0.setHash(CRYPTO.digestSync(figLeaf0));
-        leftRight0.setHash(digest(cherryLeaf0, figLeaf0));
+        final VirtualInternalRecord appleLeaf0int =
+                new VirtualInternalRecord(appleLeaf0.getPath(), CRYPTO.digestSync(appleLeaf0));
+        cache0.putHash(appleLeaf0int);
+        final VirtualInternalRecord eggplantLeaf0int =
+                new VirtualInternalRecord(eggplantLeaf0.getPath(), CRYPTO.digestSync(eggplantLeaf0));
+        cache0.putHash(eggplantLeaf0int);
+        leftLeft0.setHash(digest(appleLeaf0int, eggplantLeaf0int));
+        cache0.putHash(leftLeft0);
+        final VirtualInternalRecord cherryLeaf0int =
+                new VirtualInternalRecord(cherryLeaf0.getPath(), CRYPTO.digestSync(cherryLeaf0));
+        cache0.putHash(cherryLeaf0int);
+        final VirtualInternalRecord figLeaf0int =
+                new VirtualInternalRecord(figLeaf0.getPath(), CRYPTO.digestSync(figLeaf0));
+        cache0.putHash(figLeaf0int);
+        leftRight0.setHash(digest(cherryLeaf0int, figLeaf0int));
+        cache0.putHash(leftRight0);
         left0.setHash(digest(leftLeft0, leftRight0));
-        bananaLeaf0.setHash(CRYPTO.digestSync(bananaLeaf0));
-        grapeLeaf0.setHash(CRYPTO.digestSync(grapeLeaf0));
-        rightLeft0.setHash(digest(bananaLeaf0, grapeLeaf0));
-        dateLeaf0.setHash(CRYPTO.digestSync(dateLeaf0));
-        right0.setHash(digest(rightLeft0, dateLeaf0));
+        cache0.putHash(left0);
+        final VirtualInternalRecord bananaLeaf0int =
+                new VirtualInternalRecord(bananaLeaf0.getPath(), CRYPTO.digestSync(bananaLeaf0));
+        cache0.putHash(bananaLeaf0int);
+        final VirtualInternalRecord grapeLeaf0int =
+                new VirtualInternalRecord(grapeLeaf0.getPath(), CRYPTO.digestSync(grapeLeaf0));
+        cache0.putHash(grapeLeaf0int);
+        rightLeft0.setHash(digest(bananaLeaf0int, grapeLeaf0int));
+        cache0.putHash(rightLeft0);
+        final VirtualInternalRecord dateLeaf0int =
+                new VirtualInternalRecord(dateLeaf0.getPath(), CRYPTO.digestSync(dateLeaf0));
+        cache0.putHash(dateLeaf0int);
+        right0.setHash(digest(rightLeft0, dateLeaf0int));
+        cache0.putHash(right0);
         root0.setHash(digest(left0, right0));
+        cache0.putHash(root0);
 
         // Copy 1
         //     Delete B, Change C
@@ -1801,7 +1819,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         cherryLeaf1.setValue(CUTTLEFISH);
         // Delete B and move G
         cache1.deleteLeaf(bananaLeaf0);
-        cache1.deleteInternal(5);
+        cache1.deleteHash(5);
         final VirtualLeafRecord<TestKey, TestValue> grapeLeaf1 = cache1.lookupLeafByKey(G_KEY, true);
         assert grapeLeaf1 != null;
         grapeLeaf1.setPath(5);
@@ -1809,22 +1827,24 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         cache1.clearLeafPath(12);
         // Make a copy and hash
         final VirtualNodeCache<TestKey, TestValue> cache2 = cache1.copy();
-        final VirtualInternalRecord root1 = cache1.lookupInternalByPath(root0.getPath(), true);
-        final VirtualInternalRecord left1 = cache1.lookupInternalByPath(left0.getPath(), true);
-        final VirtualInternalRecord leftRight1 = cache1.lookupInternalByPath(leftRight0.getPath(), true);
-        final VirtualInternalRecord right1 = cache1.lookupInternalByPath(right0.getPath(), true);
-        assert root1 != null && left1 != null && leftRight1 != null && right1 != null;
-        cache1.putInternal(root1);
-        cache1.putInternal(left1);
-        cache1.putInternal(leftRight1);
-        cache1.putInternal(right1);
-        cherryLeaf1.setHash(CRYPTO.digestSync(cherryLeaf1));
-        leftRight1.setHash(digest(cherryLeaf1, figLeaf0));
+        final VirtualInternalRecord cherryLeaf1int =
+                new VirtualInternalRecord(cherryLeaf1.getPath(), CRYPTO.digestSync(cherryLeaf1));
+        cache1.putHash(cherryLeaf1int);
+        VirtualInternalRecord leftRight1 = new VirtualInternalRecord(leftRight0.getPath());
+        leftRight1.setHash(digest(cherryLeaf1int, figLeaf0int));
+        cache1.putHash(leftRight1);
+        VirtualInternalRecord left1 = new VirtualInternalRecord(left0.getPath());
         left1.setHash(digest(leftLeft0, leftRight1));
-        grapeLeaf1.setHash(CRYPTO.digestSync(grapeLeaf1));
-        dateLeaf0.setHash(CRYPTO.digestSync(dateLeaf0));
-        right1.setHash(digest(grapeLeaf1, dateLeaf0));
+        cache1.putHash(left1);
+        final VirtualInternalRecord grapeLeaf1int =
+                new VirtualInternalRecord(grapeLeaf1.getPath(), CRYPTO.digestSync(grapeLeaf1));
+        cache1.putHash(grapeLeaf1int);
+        VirtualInternalRecord right1 = new VirtualInternalRecord(right0.getPath());
+        right1.setHash(digest(grapeLeaf1int, dateLeaf0int));
+        cache1.putHash(right1);
+        VirtualInternalRecord root1 = new VirtualInternalRecord(root0.getPath());
         root1.setHash(digest(left1, right1));
+        cache1.putHash(root1);
 
         // Copy 2
         //     Change D, Delete A, Delete E, Add B
@@ -1847,14 +1867,14 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         assert figLeaf2 != null;
         figLeaf2.setPath(appleLeaf0.getPath());
         cache2.putLeaf(figLeaf2);
-        cache2.deleteInternal(leftRight1.getPath());
+        cache2.deleteHash(leftRight1.getPath());
         final VirtualLeafRecord<TestKey, TestValue> cherryLeaf2 = cache2.lookupLeafByKey(C_KEY, true);
         assert cherryLeaf2 != null;
         cherryLeaf2.setPath(leftRight1.getPath());
         cache2.putLeaf(cherryLeaf2);
         // Delete E and move F into leftLeft's place
         cache2.deleteLeaf(eggplantLeaf0);
-        cache2.deleteInternal(leftLeft0.getPath());
+        cache2.deleteHash(leftLeft0.getPath());
         figLeaf2.setPath(leftLeft0.getPath());
         cache2.putLeaf(figLeaf2);
         // Finally, add B and move F back down to where it was
@@ -1875,12 +1895,12 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         assertEquals(cherryLeaf0, cache0.lookupLeafByPath(9, false), "value should match original");
         assertEquals(figLeaf0, cache0.lookupLeafByKey(F_KEY, false), "value should match original");
         assertEquals(figLeaf0, cache0.lookupLeafByPath(10, false), "value should match original");
-        assertEquals(root0, cache0.lookupInternalByPath(0, false), "value should match original");
-        assertEquals(left0, cache0.lookupInternalByPath(1, false), "value should match original");
-        assertEquals(right0, cache0.lookupInternalByPath(2, false), "value should match original");
-        assertEquals(leftLeft0, cache0.lookupInternalByPath(3, false), "value should match original");
-        assertEquals(leftRight0, cache0.lookupInternalByPath(4, false), "value should match original");
-        assertEquals(rightLeft0, cache0.lookupInternalByPath(5, false), "value should match original");
+        assertEquals(root0.getHash(), cache0.lookupHashByPath(0, false), "value should match original");
+        assertEquals(left0.getHash(), cache0.lookupHashByPath(1, false), "value should match original");
+        assertEquals(right0.getHash(), cache0.lookupHashByPath(2, false), "value should match original");
+        assertEquals(leftLeft0.getHash(), cache0.lookupHashByPath(3, false), "value should match original");
+        assertEquals(leftRight0.getHash(), cache0.lookupHashByPath(4, false), "value should match original");
+        assertEquals(rightLeft0.getHash(), cache0.lookupHashByPath(5, false), "value should match original");
 
         // Verify the contents of cache1 are as expected
         assertEquals(grapeLeaf1, cache1.lookupLeafByKey(G_KEY, false), "value should match original");
@@ -1897,12 +1917,12 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         assertEquals(figLeaf0, cache1.lookupLeafByPath(10, false), "value should match original");
         assertEquals(DELETED_LEAF_RECORD, cache1.lookupLeafByKey(B_KEY, false), "value should be deleted");
         assertEquals(DELETED_LEAF_RECORD, cache1.lookupLeafByPath(11, false), "value should be deleted");
-        assertEquals(root1, cache1.lookupInternalByPath(0, false), "value should match original");
-        assertEquals(left1, cache1.lookupInternalByPath(1, false), "value should match original");
-        assertEquals(right1, cache1.lookupInternalByPath(2, false), "value should match original");
-        assertEquals(leftLeft0, cache1.lookupInternalByPath(3, false), "value should match original");
-        assertEquals(leftRight1, cache1.lookupInternalByPath(4, false), "value should match original");
-        assertEquals(DELETED_INTERNAL_RECORD, cache1.lookupInternalByPath(5, false), "value should be deleted");
+        assertEquals(root1.getHash(), cache1.lookupHashByPath(0, false), "value should match original");
+        assertEquals(left1.getHash(), cache1.lookupHashByPath(1, false), "value should match original");
+        assertEquals(right1.getHash(), cache1.lookupHashByPath(2, false), "value should match original");
+        assertEquals(leftLeft0.getHash(), cache1.lookupHashByPath(3, false), "value should match original");
+        assertEquals(leftRight1.getHash(), cache1.lookupHashByPath(4, false), "value should match original");
+        assertEquals(grapeLeaf1int.getHash(), cache1.lookupHashByPath(5, false), "value should match original");
 
         // Verify the contents of cache2 are as expected
         assertEquals(cherryLeaf2, cache2.lookupLeafByKey(C_KEY, false), "value should match original");
@@ -1954,8 +1974,8 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         // Test looking up internals by paths, including paths we have never used
         for (int j = 0; j < expected.firstLeafPath; j++) {
             assertEquals(
-                    expected.cache.lookupInternalByPath(j, false),
-                    snapshot.cache.lookupInternalByPath(j, false),
+                    expected.cache.lookupHashByPath(j, false),
+                    snapshot.cache.lookupHashByPath(j, false),
                     "Unexpected internal for path " + j + " in snapshot on iteration " + iteration);
         }
     }
@@ -2018,11 +2038,22 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         // Add an internal node "left" at index 1 and then root at index 0
         final VirtualInternalRecord leftInternal0 = leftInternal();
         final VirtualInternalRecord rootInternal0 = rootInternal();
-        cache0.putInternal(leftInternal0);
-        cache0.putInternal(rootInternal0);
+        cache0.putHash(leftInternal0);
+        cache0.putHash(rootInternal0);
         cache0.seal();
         validateTree(cache0, asList(rootInternal0, leftInternal0, bananaLeaf0, appleLeaf0, cherryLeaf0));
-        validateDirtyInternals(asList(rootInternal0, leftInternal0), cache0.dirtyInternals(2));
+        final Hash bananaLeaf0intHash = cache0.lookupHashByPath(bananaLeaf0.getPath(), false);
+        assertNull(bananaLeaf0intHash);
+        final Hash appleLeaf0intHash = cache0.lookupHashByPath(appleLeaf0.getPath(), false);
+        assertNull(appleLeaf0intHash);
+        final Hash cherryLeaf0intHash = cache0.lookupHashByPath(cherryLeaf0.getPath(), false);
+        assertNull(cherryLeaf0intHash);
+        // This check (and many similar checks below) is arguable. In real world, dirtyHashes() is only
+        // called when a cache is flushed to disk, and it happens only after VirtualMap copy is hashed, all
+        // hashes are calculated and put to the cache. Here the cache doesn't contain hashes for dirty leaves
+        // (bananaLeaf0, appleLeaf0, cherryLeaf0). Should dirtyHashes() include these leaf nodes? Currently
+        // it doesn't
+        validateDirtyInternals(asList(rootInternal0, leftInternal0), cache0.dirtyHashes(2, 4));
 
         // ROUND 1: Add D and E.
         final VirtualNodeCache<TestKey, TestValue> cache1 = cache;
@@ -2066,10 +2097,10 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord rightInternal1 = rightInternal();
         final VirtualInternalRecord leftInternal1 = leftInternal();
         final VirtualInternalRecord rootInternal1 = rootInternal();
-        cache1.putInternal(leftLeftInternal1);
-        cache1.putInternal(rightInternal1);
-        cache1.putInternal(leftInternal1);
-        cache1.putInternal(rootInternal1);
+        cache1.putHash(leftLeftInternal1);
+        cache1.putHash(rightInternal1);
+        cache1.putHash(leftInternal1);
+        cache1.putHash(rootInternal1);
         cache1.seal();
         validateTree(
                 cache1,
@@ -2084,7 +2115,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
                         appleLeaf1,
                         eggplantLeaf1));
         validateDirtyInternals(
-                asList(rootInternal1, leftInternal1, rightInternal1, leftLeftInternal1), cache1.dirtyInternals(4));
+                asList(rootInternal1, leftInternal1, rightInternal1, leftLeftInternal1), cache1.dirtyHashes(4, 8));
 
         // ROUND 2: Add F and G
         final VirtualNodeCache<TestKey, TestValue> cache2 = cache;
@@ -2132,11 +2163,11 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord rightInternal2 = rightInternal();
         final VirtualInternalRecord leftInternal2 = leftInternal();
         final VirtualInternalRecord rootInternal2 = rootInternal();
-        cache2.putInternal(rightLeftInternal2);
-        cache2.putInternal(leftRightInternal2);
-        cache2.putInternal(rightInternal2);
-        cache2.putInternal(leftInternal2);
-        cache2.putInternal(rootInternal2);
+        cache2.putHash(rightLeftInternal2);
+        cache2.putHash(leftRightInternal2);
+        cache2.putHash(rightInternal2);
+        cache2.putHash(leftInternal2);
+        cache2.putHash(rootInternal2);
         cache2.seal();
         validateTree(
                 cache2,
@@ -2156,7 +2187,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
                         grapeLeaf2));
         validateDirtyInternals(
                 asList(rootInternal2, leftInternal2, rightInternal2, leftRightInternal2, rightLeftInternal2),
-                cache2.dirtyInternals(6));
+                cache2.dirtyHashes(6, 12));
 
         // Now it is time to start mutating the tree. Some leaves will be removed and re-added, some
         // will be removed and replaced with a new value (same key).
@@ -2181,14 +2212,14 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualLeafRecord<TestKey, TestValue> bananaLeaf3 = bananaLeaf(5);
         cache3.clearLeafPath(11);
         cache3.putLeaf(bananaLeaf3);
-        cache3.deleteInternal(5);
+        cache3.deleteHash(5);
         assertEquals(
                 DELETED_LEAF_RECORD,
                 cache3.lookupLeafByPath(11, false),
                 "value that was looked up should match original value");
         assertEquals(
-                DELETED_INTERNAL_RECORD,
-                cache3.lookupInternalByPath(5, false),
+                DELETED_HASH,
+                cache3.lookupHashByPath(5, false),
                 "value that was looked up should match original value");
 
         validateLeaves(cache3, 5, asList(bananaLeaf3, dateLeaf1, grapeLeaf3, eggplantLeaf1, cherryLeaf2, figLeaf2));
@@ -2229,12 +2260,12 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualInternalRecord rightInternal3 = rightInternal();
         final VirtualInternalRecord leftInternal3 = leftInternal();
         final VirtualInternalRecord rootInternal3 = rootInternal();
-        cache3.putInternal(rightLeftInternal3);
-        cache3.putInternal(leftRightInternal3);
-        cache3.putInternal(leftLeftInternal3);
-        cache3.putInternal(rightInternal3);
-        cache3.putInternal(leftInternal3);
-        cache3.putInternal(rootInternal3);
+        cache3.putHash(rightLeftInternal3);
+        cache3.putHash(leftRightInternal3);
+        cache3.putHash(leftLeftInternal3);
+        cache3.putHash(rightInternal3);
+        cache3.putHash(leftInternal3);
+        cache3.putHash(rootInternal3);
         cache3.seal();
         validateDirtyInternals(
                 asList(
@@ -2244,7 +2275,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
                         leftLeftInternal3,
                         leftRightInternal3,
                         rightLeftInternal3),
-                cache3.dirtyInternals(6));
+                cache3.dirtyHashes(6, 12));
 
         // At this point, we have built the tree successfully. Verify one more time that each version of
         // the cache still sees things the same way it did at the time the copy was made.
@@ -2518,7 +2549,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         cache.seal();
 
         final List<VirtualLeafRecord<TestKey, TestValue>> leaves =
-                cache.dirtyLeaves(-1, -1).collect(Collectors.toList());
+                cache.dirtyLeaves(-1, -1).toList();
         assertEquals(0, leaves.size(), "All leaves should be missing");
     }
 
@@ -2679,15 +2710,15 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         final VirtualNodeCache<TestKey, TestValue> cache0 = new VirtualNodeCache<>();
         cache0.copy(); // Needed until #3842 is fixed
 
-        cache0.putInternal(rootInternal());
-        cache0.putInternal(leftInternal());
-        cache0.putInternal(rightInternal());
-        cache0.putInternal(leftLeftInternal());
-        cache0.putInternal(leftRightInternal());
-        cache0.putInternal(rightLeftInternal());
+        cache0.putHash(rootInternal());
+        cache0.putHash(leftInternal());
+        cache0.putHash(rightInternal());
+        cache0.putHash(leftLeftInternal());
+        cache0.putHash(leftRightInternal());
+        cache0.putHash(rightLeftInternal());
         cache0.seal();
 
-        final List<VirtualInternalRecord> internals = cache0.dirtyInternals(6).collect(Collectors.toList());
+        final List<VirtualInternalRecord> internals = cache0.dirtyHashes(6, 12).toList();
         assertEquals(6, internals.size(), "All internals should be dirty");
         assertEquals(rootInternal(), internals.get(0), "Unexpected internal");
         assertEquals(leftInternal(), internals.get(1), "Unexpected internal");
@@ -2703,18 +2734,18 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     void dirtyInternals_differentVersionsNoneDeleted() {
         final VirtualNodeCache<TestKey, TestValue> cache0 = new VirtualNodeCache<>();
         final VirtualNodeCache<TestKey, TestValue> cache1 = cache0.copy();
-        cache0.putInternal(rootInternal());
-        cache0.putInternal(leftInternal());
-        cache0.putInternal(rightInternal());
+        cache0.putHash(rootInternal());
+        cache0.putHash(leftInternal());
+        cache0.putHash(rightInternal());
         cache1.copy(); // Needed until #3842 is fixed
-        cache1.putInternal(leftLeftInternal());
-        cache1.putInternal(leftRightInternal());
-        cache1.putInternal(rightLeftInternal());
+        cache1.putHash(leftLeftInternal());
+        cache1.putHash(leftRightInternal());
+        cache1.putHash(rightLeftInternal());
         cache0.seal();
         cache1.seal();
         cache0.merge();
 
-        final List<VirtualInternalRecord> internals = cache1.dirtyInternals(6).collect(Collectors.toList());
+        final List<VirtualInternalRecord> internals = cache1.dirtyHashes(6, 12).toList();
         assertEquals(6, internals.size(), "All internals should be dirty");
         assertEquals(rootInternal(), internals.get(0), "Unexpected internal");
         assertEquals(leftInternal(), internals.get(1), "Unexpected internal");
@@ -2730,22 +2761,22 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     void dirtyInternals_differentVersionsSomeDeleted() {
         final VirtualNodeCache<TestKey, TestValue> cache0 = new VirtualNodeCache<>();
         final VirtualNodeCache<TestKey, TestValue> cache1 = cache0.copy();
-        cache0.putInternal(rootInternal());
-        cache0.putInternal(leftInternal());
-        cache0.putInternal(rightInternal());
-        cache1.deleteInternal(2);
+        cache0.putHash(rootInternal());
+        cache0.putHash(leftInternal());
+        cache0.putHash(rightInternal());
+        cache1.deleteHash(2);
 
         final VirtualNodeCache<TestKey, TestValue> cache2 = cache1.copy();
-        cache1.putInternal(rightInternal());
-        cache1.putInternal(leftLeftInternal());
-        cache1.putInternal(leftRightInternal());
-        cache2.deleteInternal(4);
-        cache2.deleteInternal(3);
+        cache1.putHash(rightInternal());
+        cache1.putHash(leftLeftInternal());
+        cache1.putHash(leftRightInternal());
+        cache2.deleteHash(4);
+        cache2.deleteHash(3);
 
         cache2.copy(); // Needed until #3842 is fixed
-        cache2.putInternal(leftLeftInternal());
-        cache2.putInternal(leftRightInternal());
-        cache2.putInternal(rightLeftInternal());
+        cache2.putHash(leftLeftInternal());
+        cache2.putHash(leftRightInternal());
+        cache2.putHash(rightLeftInternal());
 
         cache0.seal();
         cache1.seal();
@@ -2753,7 +2784,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         cache0.merge();
         cache1.merge();
 
-        final List<VirtualInternalRecord> internals = cache2.dirtyInternals(6).collect(Collectors.toList());
+        final List<VirtualInternalRecord> internals = cache2.dirtyHashes(6, 12).toList();
         assertEquals(6, internals.size(), "All internals should be dirty");
         assertEquals(rootInternal(), internals.get(0), "Unexpected internal");
         assertEquals(leftInternal(), internals.get(1), "Unexpected internal");
@@ -2769,23 +2800,23 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     void dirtyInternals_differentVersionsAllDeleted() {
         final VirtualNodeCache<TestKey, TestValue> cache0 = new VirtualNodeCache<>();
         final VirtualNodeCache<TestKey, TestValue> cache1 = cache0.copy();
-        cache0.putInternal(rootInternal());
-        cache0.putInternal(leftInternal());
-        cache0.putInternal(rightInternal());
-        cache0.putInternal(leftLeftInternal());
-        cache0.putInternal(leftRightInternal());
-        cache0.putInternal(rightLeftInternal());
-        cache1.deleteInternal(6);
-        cache1.deleteInternal(5);
-        cache1.deleteInternal(4);
+        cache0.putHash(rootInternal());
+        cache0.putHash(leftInternal());
+        cache0.putHash(rightInternal());
+        cache0.putHash(leftLeftInternal());
+        cache0.putHash(leftRightInternal());
+        cache0.putHash(rightLeftInternal());
+        cache1.deleteHash(6);
+        cache1.deleteHash(5);
+        cache1.deleteHash(4);
 
         final VirtualNodeCache<TestKey, TestValue> cache2 = cache1.copy();
-        cache1.putInternal(leftLeftInternal());
-        cache2.deleteInternal(4);
-        cache2.deleteInternal(3);
-        cache2.deleteInternal(2);
-        cache2.deleteInternal(1);
-        cache2.deleteInternal(0);
+        cache1.putHash(leftLeftInternal());
+        cache2.deleteHash(4);
+        cache2.deleteHash(3);
+        cache2.deleteHash(2);
+        cache2.deleteHash(1);
+        cache2.deleteHash(0);
 
         cache2.copy();
         cache0.seal();
@@ -2794,7 +2825,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
         cache0.merge();
         cache1.merge();
 
-        final List<VirtualInternalRecord> internals = cache2.dirtyInternals(-1).collect(Collectors.toList());
+        final List<VirtualInternalRecord> internals = cache2.dirtyHashes(-1, -1).toList();
         assertEquals(0, internals.size(), "No internals should be dirty");
     }
 
@@ -2846,15 +2877,15 @@ class VirtualNodeCacheTest extends VirtualTestBase {
     private void validateDirtyLeaves(
             List<VirtualLeafRecord<TestKey, TestValue>> expected,
             Stream<VirtualLeafRecord<TestKey, TestValue>> stream) {
-        final List<VirtualLeafRecord<TestKey, TestValue>> dirty = stream.collect(Collectors.toList());
+        final List<VirtualLeafRecord<TestKey, TestValue>> dirty = stream.toList();
         assertEquals(expected.size(), dirty.size(), "dirtyLeaves did not have the expected number of elements");
         for (int i = 0; i < expected.size(); i++) {
             assertEquals(expected.get(i), dirty.get(i), "value that was looked up should match expected value");
         }
     }
 
-    private void validateDirtyInternals(List<VirtualInternalRecord> expected, Stream<VirtualInternalRecord> stream) {
-        final List<VirtualInternalRecord> dirty = stream.collect(Collectors.toList());
+    private void validateDirtyInternals(List<VirtualRecord> expected, Stream<? extends VirtualRecord> stream) {
+        final List<? extends VirtualRecord> dirty = stream.toList();
         assertEquals(expected.size(), dirty.size(), "dirtyInternals did not have the expected number of elements");
         for (int i = 0; i < expected.size(); i++) {
             assertEquals(expected.get(i), dirty.get(i), "value that was looked up should match expected value");
@@ -2867,7 +2898,7 @@ class VirtualNodeCacheTest extends VirtualTestBase {
             if (node == null) {
                 // This signals that a leaf has fallen out of the cache.
                 assertNull(cache.lookupLeafByPath(expectedPath, false), "no value should be found");
-                assertNull(cache.lookupInternalByPath(expectedPath, false), "no value should be found");
+                assertNull(cache.lookupHashByPath(expectedPath, false), "no value should be found");
                 expectedPath++;
             } else {
                 assertEquals(expectedPath, node.getPath(), "path should match the expected value");
@@ -2885,15 +2916,15 @@ class VirtualNodeCacheTest extends VirtualTestBase {
                             "value that was looked up should match original value");
                 } else {
                     assertEquals(
-                            node,
-                            cache.lookupInternalByPath(node.getPath(), false),
+                            ((VirtualInternalRecord) node).getHash(),
+                            cache.lookupHashByPath(node.getPath(), false),
                             "value that was looked up should match original value");
                 }
             }
         }
     }
 
-    private Hash digest(VirtualRecord left, VirtualRecord right) {
+    private Hash digest(VirtualInternalRecord left, VirtualInternalRecord right) {
         final HashBuilder builder = new HashBuilder(Cryptography.DEFAULT_DIGEST_TYPE);
         builder.update(left.getHash());
         builder.update(right.getHash());
